# Waverunner

./: .gitignore  README.md  makefile  package.json  todo.txt  tsconfig.json
assets/: cover_na.xcf
public/: index.html  manifest.json
src/: App.css  App.js  App.jsx  App.scss  App.tsx  Waverunner.scss  Waverunner.tsx  functions.cpp  functions.wasm  index.js  index.tsx  scripts.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  types.rs
src/Components/: Wasm.js
src/components/: Library.jsx  Library.tsx  LibraryGrid.jsx  LibraryGrid.tsx  LibraryMenu.jsx  Media.tsx  Navbar.jsx  Navbar.tsx  Sidebar.jsx  Sidebar.tsx  Types.tsx  Viewbar.jsx  Viewbar.tsx
src/components/Sidebar/: Sidebar.scss  Sidebar.tsx
src/components/breadcrumbs/: Breadcrumbs.scss  Breadcrumbs.tsx
src/components/content/: Content.scss  Content.tsx
src/components/content/item/: Item.scss  Item.tsx
src/components/content/media/: Media.tsx
src/components/content/nest/: Nest.scss  Nest.tsx
src/components/media/: Cover.tsx  Media.tsx
src/components/navbar/: Navbar.scss  Navbar.tsx
src/components/oldMedia/: Media.scss
src/components/sidebar/: Sidebar.scss  Sidebar.tsx
src/components/viewbar/: Viewbar.scss  Viewbar.tsx
src/css/: LibraryMenu.css
src/img/: index.js  index.ts
src/scss/: App.scss  Library.scss  LibraryGrid.scss  Media.scss  Navbar.scss  Sidebar.scss  Viewbar.scss
src/scss/css/: App.css  App.css.map  Library.css  Library.css.map  LibraryGrid.css  LibraryGrid.css.map  Media.css  Media.css.map  Navbar.css  Navbar.css.map  Sidebar.css  Sidebar.css.map  Viewbar.css  Viewbar.css.map
src/ts/: functions.ts  library.ts  queue.ts  types.ts
(+4 files in other folders)
