[package]
name = "waverunner"
version = "0.1.0"
description = "A multimedia library"
authors = ["you"]
license = "GPLv3"
repository = ""
default-run = "waverunner"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.1", features = [] }

[dependencies]
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
tauri = { version = "1.0.1", features = ["api-all"] }
tao = "0.8.4"
window-shadows = "0.1.2"
dirs = "4.0.0"
matroska = "0.15.0"
tmdb = "3.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
